--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 header:
 
   - titles: 데이터분석
-    url: /_posts/data_analytics
+    url: /_posts/data_analytics/
 
   - titles: 후기
-    url: /_posts/review
+    url: /_posts/review/
 
   - titles: 개발
-    url: /_posts/development
+    url: /_posts/development/
 
   - titles:
       # @start locale config
