--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 header:
 
-  - titles: 데이터분석
+  - titles: "데이터분석"
     url: /_posts/data_analytics/
 
-  - titles: 후기
+  - titles: "후기"
     url: /_posts/review/
 
-  - titles: 개발
+  - titles: "개발"
     url: /_posts/development/
 
   - titles:
